syntax = "proto3";

package pb;

option go_package = "github.com/zvash/bgmood-auth-service/pb";

import "google/protobuf/timestamp.proto";

message ListActiveSessionsRequest {}

message ActiveSession {
  string client_ip = 1;
  string user_agent = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message ListActiveSessionsResponse {
  ActiveSession current_session = 1;
  repeated ActiveSession other_sessions = 2;
}
